--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,11 @@ bind p paste-buffer
 bind-key -T edit-mode-vi Up send-keys -X history-up
 bind-key -T edit-mode-vi Down send-keys -X history-down
 unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi Enter     ;   
+#bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace xclip -selection clipboard "
+bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "xclip -selection clipboard "
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "xclip -selection clipboard -i" \; send -X clear-selection
 unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-q send-keys -X rectangle-toggle
 unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
 unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
