--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Atempt to fix cappy functino for yank-plugin.
-#set -g default-shell $SHELL 
+#set -g default-shell $SHELL
 #set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #Mouse works as expected
@@ -50,7 +50,7 @@ bind p paste-buffer
 bind-key -T edit-mode-vi Up send-keys -X history-up
 bind-key -T edit-mode-vi Down send-keys -X history-down
 unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;   
+unbind-key -T copy-mode-vi Enter     ;
 #bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace xclip -selection clipboard "
 bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "xclip -selection clipboard "
 #bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
@@ -67,8 +67,10 @@ bind C-§ run "tmux save-buffer - | xclip -i -sel clipboard"
 #bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # easy-to-remember split pane commands
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+# bind | split-window -h
+bind - split-window -v -c "#{pane_current_path}"
+# bind - split-window -v
 unbind '"'
 unbind %
 
