--- a/TX2 Dotfiles/.tmux.conf
+++ b/TX2 Dotfiles/.tmux.conf
@@ -2,7 +2,7 @@
 #  _
 # | |_ _ __ ___  _   ___  __
 # | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  < 
+# | |_| | | | | | |_| |>  <
 #  \__|_| |_| |_|\__,_/_/\_\
 #
 #############################
@@ -45,6 +45,10 @@ set-window-option -g mode-keys vi # vi key
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 setw -g window-status-current-attr reverse
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Automatically set window title
 setw -g automatic-rename
@@ -127,11 +131,11 @@ bind C-j previous-window
 bind C-k next-window
 bind-key C-a last-window # C-a C-a for last active window
 bind A command-prompt "rename-window %%"
-# By default, all windows in a session are constrained to the size of the 
-# smallest client connected to that session, 
-# even if both clients are looking at different windows. 
-# It seems that in this particular case, Screen has the better default 
-# where a window is only constrained in size if a smaller client 
+# By default, all windows in a session are constrained to the size of the
+# smallest client connected to that session,
+# even if both clients are looking at different windows.
+# It seems that in this particular case, Screen has the better default
+# where a window is only constrained in size if a smaller client
 # is actively looking at it.
 setw -g aggressive-resize on
 
