A few updates on how things work to match to the new work PC
Signed-off-by: byteofsoren <byteofsoren@gmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 ## Coppy of vim freandly config from arcwici
 # Start with fishshell.
 #set-option -g default-shell "/usr/bin/fish"
-set-option -g default-shell "/usr/bin/bash"
+#set-option -g default-shell "/usr/bin/bash"
 
 # 256 collor suport.
 #set -g default-terminal "screen-256color"
