Changed the mapings for Ycm to include the goto and find command's.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,8 @@ set -g default-terminal "xterm-256color"
 set-option -g xterm-keys on
 #Prefix is Ctrl-a
 set -g prefix C-a
-bind C-a send-prefix
+bind M-Space send-prefix
+# bind C-a send-prefix
 unbind C-b
 
 #set -sg escape-time 1
