--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,11 +7,17 @@
 #set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 set-option -g xterm-keys on
-#Prefix is Ctrl-a
-set -g prefix C-a
-bind M-Space send-prefix
-# bind C-a send-prefix
-unbind C-b
+
+
+# Set the prefix to Ctrl-Space
+set-option -g prefix C-Space
+
+# Unbind the default Ctrl-b prefix keybinding
+unbind-key C-b
+
+# Ensure that we can send Ctrl-Space to other apps
+bind-key C-Space send-prefix
+
 
 #set -sg escape-time 1
 # Reload config with <prefix> <shift> r
