I added a function to auto load the espressidf in tmux when I splitt the window but not creating a new window.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,6 +40,15 @@ setw -g pane-base-index 1
 set-option -g mouse on
 
 
+# Set up a hook for after you split a tmux window when you develop with esp32 espress if
+# Each time you split a window it whill auto load the espressif configurations.
+# First use the $GETIFD_USEFILE to seach for the use file.
+set-option -ga update-environment " GETIFD_USEFILE"
+set-hook -g after-split-window 'run-shell "if [ -f #{env:GETIFD_USEFILE} ]; then tmux send-keys \"get_idf\" C-m; fi"'
+
+# DONE
+
+
 setw -g monitor-activity on
 set -g visual-activity on
 
@@ -55,10 +64,10 @@ bind p paste-buffer
 #bind -t vi-copy 'Space' halfpage-down
 #bind -t vi-copy 'Bspace' halfpage-up
 
-bind-key -T edit-mode-vi Up send-keys -X history-up
-bind-key -T edit-mode-vi Down send-keys -X history-down
-unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;
+bind-key   -T edit-mode-vi Up    send-keys -X       history-up
+bind-key   -T edit-mode-vi Down  send-keys -X       history-down
+unbind-key -T copy-mode-vi Space ; bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind-key -T copy-mode-vi Enter ;
 #bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace xclip -selection clipboard "
 bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "xclip -selection clipboard "
 #bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
