--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,8 @@
 
 # 256 collor suport.
 #set -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+set-option -a terminal-features 'xterm-256color:RGB'
 set-option -g xterm-keys on
 
 
@@ -43,8 +44,15 @@ set-option -g mouse on
 # Set up a hook for after you split a tmux window when you develop with esp32 espress if
 # Each time you split a window it whill auto load the espressif configurations.
 # First use the $GETIFD_USEFILE to seach for the use file.
-set-option -ga update-environment " GETIFD_USEFILE"
-set-hook -g after-split-window 'run-shell "if [ -f #{env:GETIFD_USEFILE} ]; then tmux send-keys \"get_idf\" C-m; fi"'
+
+# set-hook -g after-split-window "if-shell '[[ -n $(tmux show-window-option -v @run_idf_onpannel 2>/dev/null) && $(tmux show-window-option -v @run_idf_onpannel 2>/dev/null) == 1 ]]' 'send-keys \"get_idf\" C-m'"
+
+
+
+# set-hook -g after-split-window "if-shell '[[ #{window_env:RUN_IDF_ONPANNEL } == 1 ]]' 'send-keys \"get_idf\" C-m'"
+# set-option -ga update-environment " GETIFD_USEFILE"   # OLD
+# set-hook -g after-split-window 'run-shell "if [ -f #{env:GETIFD_USEFILE} ]; then tmux send-keys \"get_idf\" C-m; fi"'
+
 
 # DONE
 
